--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
 
 :root {
   --main-color: #9147ff;
+  --gradient_blue: linear-gradient(148deg, rgba(213,246,255,1) 0%, rgba(122,228,255,1) 28%, rgba(171,144,255,1) 58%, rgba(145,71,255,1) 100%);
+  --gradient_purple3: linear-gradient(148deg, rgba(250,225,255,1) 6%, rgba(240,155,255,1) 38%, rgba(238,119,252,1) 71%, rgba(157,92,255,1) 100%);
+  --gradient_purple2: linear-gradient(148deg, rgba(250,225,255,1) 6%, rgba(240,155,255,1) 32%, rgba(238,119,252,1) 61%, rgba(145,71,255,1) 100%);
+  --gradient_purple: linear-gradient(148deg, rgba(250,225,255,1) 6%, rgba(240,155,255,1) 38%, rgba(238,119,252,1) 71%, rgba(172,117,255,1) 100%);
 }
 
 .noselect {
@@ -20,44 +24,408 @@
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
-
-/* ------------------------------------------------------------------------ */
-
+/* GENERAL THINGS ----------------------------------------------------------*/
 
 .link{text-decoration: none;}
 .link:link{text-decoration: none; color: white;}
 .link:visited{text-decoration: none; color: white;}
-.link:hover{color: var(--main-color); height: 100%; font-size: 175%;}
-.logo_link:hover{transform: scale(1.1);}
+.link:hover{
+  color: var(--main-color);
+  transform: scale(1.1);
+}
 
 .theme_color{color: var(--main-color);}
 
-.s1 {
-  width: 100%;
-  min-height: 100vh;
+.section{
+  width: 100vw;
+  height: fit-content;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: black;
-  color: white;
-  z-index: 50;
+  margin: 1rem 0;
+  background-color: white;
 }
 
-/*Header --------------------------------------------------------------------------------------- */
+.body{
+  background: var(--gradient_purple);
+  /* background-repeat: no-repeat; */
+}
+
+/* HEADER -------------------------------------------------------------*/
 
 header{
   position: fixed;
+  z-index: 100000;
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
-  padding: 0.5em 3em;
-  z-index: 1000;
+  height: 4rem;
+  font-size: 1rem;
+  padding: 1% 1%;
   display: flex;
   align-items: center;
   justify-content:space-between;
   background-color:  rgba(114, 114, 114, 0.5);
   backdrop-filter: blur(2.5px);
 }
+
+.nav_bar{
+  width: 60%;
+  padding: 0em 1em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.5em;
+  letter-spacing: 0.1em;
+}
+
+.nav_bar-a{
+  transition: 0.5s;
+}
+
+/* Section 1: Home ----------------------------------------------------------*/
+
+.s1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  color: var(--gradient_purple);
+  z-index: 10;
+}
+
+.s1_video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.s1_overlay{
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.2;
+  mix-blend-mode: overlay;
+}
+
+.s1_text{
+  position: absolute;
+  z-index: 100;
+  top: 70%;
+  left: 20%;
+  transform: translate(-20%, -70%);
+  width: 60%;
+}
+/*
+.s1_text a h1{
+  font-size: 7.5em;
+  font-weight: 800;
+  line-height: 1.4em;
+  letter-spacing: 0.075em;
+  font-family: ; 
+  -webkit-text-stroke: 1px black;
+  text-shadow:
+      3px 3px 0 #000,
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+     -1px 1px 0 #000,
+      1px 1px 0 #000;
+}
+
+.s1_text a{text-decoration: none;}
+.s1_text a:link{text-decoration: none; color: white;}
+.s1_text a:visited{text-decoration: none; color: white;}
+.s1_text a h1:hover{
+  color:var(--main-color);
+  height: 100%;
+  width: 8em;
+  transform: scale(1.1);
+  border-color: var(--main-color);
+}
+
+.s1_text p{
+  font-size: 2em;
+  line-height: 1.75em;
+  text-anchor: end;
+}
+
+.s1_buttons a{
+  font-size: 3em;
+  font-weight: 600;
+  padding: 1em;
+  color: white;
+  display: flex;
+  min-width: fit-content;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+
+.s1_buttons a{text-decoration: none;}
+.s1_buttons a:link{text-decoration: none; color: white;}
+.s1_buttons a:visited{text-decoration: none; color: white;}
+.s1_buttons a:hover{
+  color:var(--main-color);
+  height: 100%;
+  width: fit-content;
+  transform: scale(1);
+  border-color: var(--main-color);
+}
+
+.s1_buttons{
+  position: absolute;
+  z-index: 100;
+  display: flex;
+  min-width: 5em;
+  align-items: center;
+  justify-content: center;
+  top: 90%;
+  left: 10%;
+  transform: translate(-10%, -90%);
+  font-size: 0.9em;
+  font-weight: 600;
+}
+
+.buy_button{
+  color: var(--main-color);
+  display: flex;
+  min-width: 8em;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+  border: white;
+  border-style: solid;
+  border-radius: 0.8em;
+}
+
+#pancake{
+  transform: scale(0.40);
+}
+#twitter{
+  transform: scale(0.40);
+}
+#poocoin{
+  transform: scale(0.40);
+}
+#telegram{
+  transform: scale(0.40);
+}
+
+.social-media{
+  position: absolute;
+  bottom: 15%;
+  transform: translate(32.5%, 0%);
+  right: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.social-media li{
+  list-style: none;
+  height: 9em;
+}
+
+.social-media li a{
+  display: inline-block;
+  transform: scale(1);
+  transition: 0.5s;
+}
+
+.social-link:hover{
+  transform: scale(1.25) translateX(-0.5em);
+}
+*/
+
+/* Section 2: About ----------------------------------------------------------*/
+
+.s2{
+  flex-direction: column;
+  padding: 2rem;
+  font-size: 1rem;
+}
+
+.s2-div_About{
+  display: flex;
+  width: 100%;
+}
+
+#s2-div_data{
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.s2-stats{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.s2-stat_name{
+  font-size: 1.5em;
+  color: rgb(162, 160, 160);
+}
+.s2-stat_number{
+  font-size: 2em;
+  color: rgb(0, 0, 0);
+}
+
+#s2-div_description{
+  flex-direction: column;
+}
+
+
+/* Section 3: Roadmap ----------------------------------------------------------*/
+
+
+
+/* Section 4: Tokenomics ----------------------------------------------------------*/
+
+.s4{
+  flex-direction: column;
+  padding: 2rem;
+  font-size: 1rem;
+}
+
+.s4-div_Tokenomics{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+#s4-div_title{
+
+}
+
+#s4-div_description{
+  flex-direction: row;
+}
+
+#s4-div_chart{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#s4-div_legend{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.s4-legend_item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.s4-legend_circle{
+  width: 1em;
+  height: 1em;
+  border-radius: 100%;
+  background-color: red;  
+  margin-right: 1em;
+}
+
+.s4-legend_item p{
+  
+}
+
+#s4-div_info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.s4-info_item{
+  display: flex;
+  flex-direction: row;
+}
+
+.s4-info_name{
+  margin-right: 1em;
+}
+
+.s4-info_number{
+  
+}
+
+.s4-info_item ul{
+  list-style-position: inside;
+  margin-left: 1em;
+}
+
+.s4-info_item ul li{
+  
+}
+
+/* Section 5: Dev Team ----------------------------------------------------------*/
+
+
+
+/* Footer ----------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 
 #logo{
   transform: scale(0.2);
@@ -72,41 +440,23 @@ header{
   transition: 0.5s;
 }
 
+.logo_link:hover{transform: scale(1.1);}
+
 .logo{
   top: 0;
   transform: scale(0.6);
 }
 
-.nav_bar{
-  padding: 0em 3em;
+.s1 {
+  width: 100%;
+  min-height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  font-size: 2em;
-  font-weight: 500;
-  letter-spacing: 2px;
-}
-
-.nav_bar a{
-  margin: 0px 30px;
-  transition: 0.5s;
-}
-
-.log_in_out{
-  display: flex;
   align-items: center;
-  justify-content: space-between;
-  font-size: 1.4em;
-  font-weight: 500;
-  letter-spacing: 2px;
+  background: black;
+  color: white;
+  z-index: 50;
 }
-
-.log_in_out a{
-  margin: 0px 30px;
-  transition: 0.5s;
-}
-
-/*Section1 --------------------------------------------------------------------------------------- */
 
 .s1 video{
   position: absolute;
@@ -143,7 +493,7 @@ header{
   font-weight: 800;
   line-height: 1.4em;
   letter-spacing: 0.075em;
-  /* font-family: ; */
+  font-family: ; 
   -webkit-text-stroke: 1px black;
   text-shadow:
       3px 3px 0 #000,
@@ -167,7 +517,6 @@ header{
 .s1_text p{
   font-size: 2em;
   line-height: 1.75em;
-  /* font-family: ; */
   text-anchor: end;
 }
 
@@ -265,7 +614,6 @@ header{
   font-size: 1.1em;
 }
 
-/*Section3 --------------------------------------------------------------------------------------- */
 
 .s3_div{
   position: absolute;
@@ -308,7 +656,6 @@ header{
   font-size: 2em;
   font: 1000;
   line-height: 1.5em;
-  /* font-family: ; */
 }
 
 .s3_div li{
@@ -317,7 +664,6 @@ header{
 
 
 
-/*Section2 --------------------------------------------------------------------------------------- */
 
 .containers2{
   position: absolute;
@@ -605,7 +951,6 @@ header{
 .footer_link:visited{text-decoration: none; color: #515151;}
 .footer_link:hover{color: rgb(81, 81, 81); height: 100%; font-size: 105%;}
 
-/*Responsive --------------------------------------------------------------------------------------------- */
 
 
 @media(max-width: 2440px){
@@ -720,7 +1065,6 @@ header{
   .description{
     font-size: 0.9em;
   }
-  /* ------------------------------------------------------------------------------------------- */
 
 }
 
@@ -794,7 +1138,6 @@ header{
     font-size: 1em;
     font-weight: 600;
   }
-  /* ------------------------------------------------------------------------------------------- */
 
 }
 
@@ -895,7 +1238,7 @@ header{
 
 
 
-  /* ------------------------------------------------------------------------------------------- */
+ 
 
 }
 
@@ -963,7 +1306,6 @@ header{
   .roadmap_text{
     font-size: 1.75em;
   }
-  /* ------------------------------------------------------------------------------------------- */
 
   .subcontainers4 {
     top: 70%;
@@ -1054,7 +1396,7 @@ header{
   .description{
     padding: 0;
   }
-  /* ------------------------------------------------------------------------------------------- */
+ 
 
   
 }
@@ -1203,7 +1545,6 @@ header{
   .description{
     padding: 0;
   }
-  /* ------------------------------------------------------------------------------------------- */
 
 }
 @media(max-height: 920px){
@@ -1300,7 +1641,6 @@ header{
     padding: 0;
     width: fit-content; 
   }
-  /* ------------------------------------------------------------------------------------------- */
   .subcontainers4 {
     top: 70%;
     transform: translate(0%, -70%);
@@ -1473,7 +1813,7 @@ header{
     margin: 1em 1em;
     box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
   }
-  /* ------------------------------------------------------------------------------------------- */
+  
 
 }
 @media(max-width: 930px){
@@ -1519,7 +1859,6 @@ header{
     color: var(--main-color); 
     font-size: 1.25em;
   }
-  /* ------------------------------------------------------------------------------------------- */
 
 }
 
@@ -1592,7 +1931,7 @@ header{
   .roadmap_text{
     font-size: 1.5em;
   }
-  /* ------------------------------------------------------------------------------------------- */
+
 
 }
 
@@ -1604,7 +1943,7 @@ header{
     padding: 1em 0;
     justify-content: center;
   }
-  /* ------------------------------------------------------------------------------------------- */
+ 
   #twitters4{
     display: none;
   }
@@ -1672,8 +2011,7 @@ header{
     align-items: center;
     padding: 0 4em 0 4em;
 }
-  /* ------------------------------------------------------------------------------------------- */
-
+ 
 }
 
 @media(max-width: 550px){
@@ -1709,8 +2047,7 @@ header{
     color: var(--main-color); 
     font-size: 1.75em;
   }
-  /* ------------------------------------------------------------------------------------------- */
-
+ 
 }
 
 @media(max-width: 485px){
@@ -1772,7 +2109,6 @@ header{
     align-items: center;
     padding: 0 2em 0 2em;
 }
-  /* ------------------------------------------------------------------------------------------- */
 
 }
 
@@ -1838,8 +2174,7 @@ header{
   .roadmap_text{
     font-size: 1em;
   }
-  /* ------------------------------------------------------------------------------------------- */
-
+  
 }
 
 @media(max-width: 380px){
@@ -1916,8 +2251,7 @@ header{
     align-items: center;
     padding: 0 2em 0 2em;
   }
-  /* ------------------------------------------------------------------------------------------- */
-
+ 
 }
 
 @media(max-width: 365px){
@@ -1946,8 +2280,7 @@ header{
   .roadmap_text{
     font-size: 0.65em;
   }
-  /* ------------------------------------------------------------------------------------------- */
-
+  
 }
 
 @media(max-width: 300px){
@@ -1985,11 +2318,9 @@ header{
     align-items: center;
     padding: 0 2em 0 2em;
   }
-  /* ------------------------------------------------------------------------------------------- */
-
+  
 }
 
-/* CONCRETE RESOLUTIONS ------------------------------------------------------------- */
 
 @media(width: 2048px){
   @media(height: 1080px){
@@ -2502,7 +2833,7 @@ header{
       font-size: 1em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
+      /* font-family: ; 
     }
 
     .text_cd, .text_lp, .text_sr {
@@ -2615,7 +2946,7 @@ header{
       font-size: 1.2em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
+
     }
 
     .text_cd, .text_lp, .text_sr {
@@ -2693,7 +3024,7 @@ header{
       font-size: 0.8em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
+
     }
 
     .text_cd, .text_lp, .text_sr {
@@ -2809,7 +3140,6 @@ header{
       font-size: 0.8em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
     }
 
     .text_footer{
@@ -2934,7 +3264,6 @@ header{
       font-size: 0.8em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
     }
 
     .text_footer{
@@ -3047,7 +3376,6 @@ header{
       font-size: 0.8em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
     }
 
     .text_footer{
@@ -3160,7 +3488,6 @@ header{
       font-size: 0.8em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
     }
 
     .text_footer{
@@ -3276,7 +3603,6 @@ header{
       font-size: 0.8em;
       font: 1000;
       line-height: 1.5em;
-      /* font-family: ; */
     }
 
     .text_footer{
@@ -3392,7 +3718,6 @@ header{
       font-size: 0.25em;
       font: 1000;
       line-height: 0.1em;
-      /* font-family: ; */
     }
     .s3_div li{
       height: 1em;
@@ -3572,3 +3897,4 @@ header{
 }
 
 
+ */
