--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
+.invert{
+  filter: invert(1);
+}
+
 /* GENERAL THINGS ----------------------------------------------------------*/
 
 .link{text-decoration: none;}
@@ -59,7 +63,7 @@
   width: 100vw;
   height: 4rem;
   font-size: 1rem;
-  padding: 1% 1%;
+  padding: 1% 3%;
   display: flex;
   align-items: center;
   justify-content:space-between;
@@ -81,6 +85,250 @@
   transition: 0.5s;
 }
 
+/* SOCIAL MEDIA ----------------------------------------------------------*/
+
+.side_bar{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 6.5rem;
+  height: 6.5rem;
+  border-radius: 6.5rem;
+  background: #9147ff;
+  transition: 0.5s;
+  z-index: 100000;
+  overflow: hidden;
+  font-size: 1rem;
+  transition: width 0.25s, height 1s;
+  transition-delay: 0s, 0s;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.side_bar.active{
+  width: 6.5rem;
+  height: 32.5rem;
+  border-radius: 3rem;
+  transition: width 0.25s, height 1s;
+  transition-delay: 0s, 0s;
+	box-shadow: 0px 0px 0px #999;
+}
+
+.toggle{
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #9147ff;
+  border-radius: 3rem;
+  transition: top 1s, left 0s, background 1.25s;
+  cursor: pointer;
+}
+
+.toggle.active{
+  top: 100%;
+  left: 100%;
+  transform: translate(-100%, -100%);
+  background: black;
+  border: #000;
+  border-radius: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: top 1s, left 0s, background 0.5s;
+}
+
+.toggle::before{
+  content: "+";
+  position: absolute;
+  font-size: 5em;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 6.5rem;
+  height: 6.5rem;
+  font-weight: 400;
+  transition: 0.5s;
+}
+
+.toggle.active::before{
+  transform: rotate(315deg);
+}
+
+.side_bar_list{
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  padding: 5%;
+}
+
+.side_bar_list.active{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  padding: 5%;
+}
+
+.side_bar-list-item{
+  position: relative;
+  list-style: none;
+  width: 100%;
+  height: 25%;
+  padding: 2.5% 1%;
+}
+
+.side_bar-social_media{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  color: white;
+}
+
+.social_media-img_span{
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 10%;
+}
+
+.social_media-img{
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+}
+
+.social_media-img_pancake{
+  opacity: 0;
+  transition: 4s;
+}
+
+.social_media-img_pancake.active{
+  opacity: 1;
+  transition: 4s;
+}
+
+.social_media-img_twitter{
+  opacity: 0;
+  transition: 4s;
+}
+
+.social_media-img_twitter.active{
+  opacity: 1;
+  transition: 4s;
+}
+
+.social_media-img_twitch{
+  opacity: 0;
+  transition: 4s;
+}
+
+.social_media-img_twitch.active{
+  opacity: 1;
+  transition: 4s;
+}
+
+.social_media-img_telegram{
+  opacity: 0;
+  transition: 4s;
+}
+
+.social_media-img_telegram.active{
+  opacity: 1;
+  transition: 4s;
+}
+
+/* Añadir esto en otro momento o resolución si eso */
+
+.social_media_text_span{
+  width: 80%;
+  height: 100%;
+  padding: 1% 1% 1% 10%;
+  position: relative;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+/* ---------------------------------------------- */
+
+.social_media-p{
+  font-size: 1.5em;
+  color: white;
+}
+
+.side_bar-social_media{text-decoration: none;}
+.side_bar-social_media:link{text-decoration: none; color: black;}
+.side_bar-social_media:visited{text-decoration: none; color: black;}
+.side_bar-social_media:hover{
+  color: var(--main-color);
+  font-size: 1em;
+}
+
+
+
+
+
+/*
+.side_bar{
+  position: relative;
+  z-index: 1000;
+  top: 90%;
+  left: 98%;
+  transform: translate(-98%, -90%);
+  width: 5%;
+  height: 40%;
+  font-size: 1rem;
+  padding: 1% 0.5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:space-around;
+  border-radius: 8em;
+  background: linear-gradient(180deg, rgb(245, 197, 255) 6%, rgb(244, 182, 255) 38%, rgb(246, 163, 255) 71%, rgb(234, 148, 255) 100%);
+  backdrop-filter: blur(2.5px);
+	box-shadow: 2px 2px 3px #999;
+  transition: 0.5s;
+}
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Section 1: Home ----------------------------------------------------------*/
 
 .s1 {
@@ -92,43 +340,45 @@
   background: black;
   color: var(--gradient_purple);
   z-index: 10;
+  font-size: 1rem;
 }
 
 #s1_video{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.8;
-  object-fit: cover;
-}
-
-.s1_overlay{
   position: absolute;
   z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 1;
+  object-fit: cover;
+}
+
+.s1_overlay{
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: black;
-  opacity: 0.1;
+  opacity: 0.2;
   mix-blend-mode: overlay;
 }
 
 .s1_text{
   position: absolute;
-  z-index: 1000;
-  top: 80%;
+  z-index: 10000;
+  top: 70%;
   left: 20%;
-  transform: translate(-20%, -80%);
+  transform: translate(-20%, -70%);
   width: 60%;
   color: white;
   font-size: 1rem;
 }
 
 .s1-text_titleName{
-  font-size: 4em;
+  font-size: 5em;
   font-weight: 800;
   line-height: 1.75em;
   letter-spacing: 0.085em;
@@ -142,104 +392,36 @@
 }
 
 .s1-text_titleName:hover{
-  font-size: 5em;
+  font-size: 6em;
 }
 
 .s1-text_description{
-  font-size: 1.5em;
+  font-size: 1.75em;
   line-height: 1.65em;
   text-anchor: end;
-}
-/*
-.s1_buttons a{
-  font-size: 3em;
-  font-weight: 600;
-  padding: 1em;
-  color: white;
-  display: flex;
-  min-width: fit-content;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-}
-
-.s1_buttons a{text-decoration: none;}
-.s1_buttons a:link{text-decoration: none; color: white;}
-.s1_buttons a:visited{text-decoration: none; color: white;}
-.s1_buttons a:hover{
-  color:var(--main-color);
-  height: 100%;
-  width: fit-content;
-  transform: scale(1);
-  border-color: var(--main-color);
 }
 
 .s1_buttons{
   position: absolute;
-  z-index: 100;
+  z-index: 10000;
   display: flex;
-  min-width: 5em;
   align-items: center;
   justify-content: center;
-  top: 90%;
+  top: 92.5%;
   left: 10%;
-  transform: translate(-10%, -90%);
-  font-size: 0.9em;
-  font-weight: 600;
+  transform: translate(-10%, -92.5%);
 }
 
-.buy_button{
-  color: var(--main-color);
-  display: flex;
-  min-width: 8em;
-  align-items: center;
-  justify-content: center;
+#buy_button{
+  font-size: 2.5em;
+  font-weight: 600;
+  padding: 0.75em;
+  color: white;
   transition: 0.3s;
   border: white;
   border-style: solid;
   border-radius: 0.8em;
 }
-
-#pancake{
-  transform: scale(0.40);
-}
-#twitter{
-  transform: scale(0.40);
-}
-#poocoin{
-  transform: scale(0.40);
-}
-#telegram{
-  transform: scale(0.40);
-}
-
-.social-media{
-  position: absolute;
-  bottom: 15%;
-  transform: translate(32.5%, 0%);
-  right: 0;
-  z-index: 10;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.social-media li{
-  list-style: none;
-  height: 9em;
-}
-
-.social-media li a{
-  display: inline-block;
-  transform: scale(1);
-  transition: 0.5s;
-}
-
-.social-link:hover{
-  transform: scale(1.25) translateX(-0.5em);
-}
-*/
 
 /* Section 2: About ----------------------------------------------------------*/
 
@@ -277,7 +459,56 @@
 
 #s2-div_description{
   flex-direction: column;
+  justify-content: space-evenly;
+  padding: 5em 15em;
 }
+
+#s2-top{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4em;
+}
+
+#s2-mid{
+  display: flex;
+  flex-direction: row;
+  margin: 4em 0;
+}
+
+#s2-bot{
+  display: flex;
+  flex-direction: column;
+  margin-top: 4em;
+}
+
+
+.s2-description_title{
+  font-size: 3em;
+  margin-bottom: 0.5em;
+  color: var(--main-color);
+  font-weight: bold;
+}
+
+.s2-description_text{
+  font-size: 1.5em;
+  margin-top: 0.5em;
+}
+
+#s2-description_mid{
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+
+.s2-description_img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+}
+
+
+
 
 
 /* Section 3: Roadmap ----------------------------------------------------------*/
@@ -304,36 +535,6 @@
 
 #s4-div_description{
   flex-direction: row;
-}
-
-#s4-div_chart{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#s4-div_legend{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.s4-legend_item{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.s4-legend_circle{
-  width: 1em;
-  height: 1em;
-  border-radius: 100%;
-  background-color: red;  
-  margin-right: 1em;
-}
-
-.s4-legend_item p{
-  font-size: 1.3em;
 }
 
 #s4-div_info{
@@ -384,7 +585,46 @@
 
 /* Section 5: Dev Team ----------------------------------------------------------*/
 
+.s5{
+  flex-direction: column;
+  padding: 2rem 5rem;
+  font-size: 1rem;
+}
 
+.s5-div_team{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+#s5-div_title{
+  font-size: 5em;
+}
+
+#s5-div_content{
+  flex-direction: row;
+}
+
+.s5-team_item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 4em;
+}
+
+.s5-team_img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.s5-team_description{
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  text-align: center;
+}
 
 /* Footer ----------------------------------------------------------*/
 
