--- a/Voting Platform/style_voting_platform.css
+++ b/Voting Platform/style_voting_platform.css
@@ -2,13 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-@import url('http://fonts.cdnfonts.com/css/soleil');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'soleil',sans-serif;
+  font-family: "soleil",sans-serif;
 }
 
 html{
@@ -65,9 +64,6 @@ html{
 
 /* GENERAL THINGS ----------------------------------------------------------*/
 
-.body{
-}
-
 section{
     position: relative;
     width: 100vw;
@@ -122,18 +118,23 @@ section{
 }
 
 .logo_div{
-    width: 3rem;
+    width: 10rem;
     height: 3rem;
 }
 
-.logo_img{
+.logo_div a{
     width: 100%;
     height: 100%;
+}
+
+.logo_img{
+    width: 10rem;
+    height: 3rem;
     transition: transform 0.5s linear;
 }
 
 .logo_img:hover{
-    transform: scale(1.15);
+    transform: scale(1.15) translateY(-0.15rem);
     transition: transform 0.5s linear;
 }
 
@@ -145,12 +146,27 @@ section{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
+    line-height: 1.25rem;
     letter-spacing: 0.075em;
+    text-align: center;
+    padding: 0 5rem;
 }
 
 .nav_bar a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     transition: 0.5s linear;
+}
+
+.nav_bar a span{
+    font-size: 1.25rem;
+    font-family: "soleil",sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    vertical-align: middle;
 }
 
 .nav_bar a:hover{
@@ -166,6 +182,46 @@ section{
 .nav_bar-a:hover{
     transform: scale(1.15) translateY(-0.15rem);
 }
+
+.wallet_div{
+    position: relative;
+    width: 12rem;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    top: 1.25rem;
+}
+
+.wallet_div div{
+    width: 100%;
+    height: 45%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.wallet_div div img{
+    width: 2rem;
+    height: 2rem;
+}
+
+.wallet_div div span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2rem;
+    width: 80%;
+    border-radius: 2rem;
+    background: white;
+    color: black;
+}
+
+
+
+
 
 /* SOCIAL MEDIA ----------------------------------------------------------
 
@@ -522,20 +578,37 @@ font-size: 0.775rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 2rem;
+    height: 3rem;
+    border-radius: 2.5rem;
     padding: 0.8rem 3rem;
-    background-color: rgba(224, 224, 224, 0.6);
+    background: rgba(255, 255, 255, 0.5);
+    transition: 0.5s;
     margin: 1rem;
+    outline: none;
+    border: none;
 }
 
 .auth_section-button p{
-    font-size: 2rem;
-    margin: 0;
-    padding: 0;
+    height: 1rem;
+    width: 100%;
+    font-size: 1rem;
+    line-height: 1rem;
+    margin-top: 0.2rem;
+    font-family: "soleil",sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.auth_section-button:hover{
+    background: rgba(255, 255, 255, 1);
+    transform: scale(1.1) translateY(-0.2rem);
 }
 
 .auth_section-paragraf{
-    margin: 0.4rem;  
+    margin: 0.4rem;
+    font-family: "soleil",sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 /* submit_section----------------------------------------------------------- */
@@ -567,7 +640,7 @@ font-size: 0.775rem;
     border-radius: 1.5rem;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(2.5px);
-    padding: 1.5rem 2rem;
+    padding: 2rem 2rem;
 }
 
 .common-div{
@@ -585,11 +658,17 @@ font-size: 0.775rem;
 .common-info h3{
     font-size: 1.2rem;
     text-align: center;
+    font-family: "soleil",sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .common-info p{
     font-size: 0.7rem;
     padding: 0.75rem 0 0 0;
+    font-family: "soleil",sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .common-last_winner{
@@ -597,7 +676,7 @@ font-size: 0.775rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem 1.5rem 0.5rem;
+    padding: 1rem 1.5rem 1rem;
 }
 
 .common-last_winner h3{
@@ -608,6 +687,8 @@ font-size: 0.775rem;
 .common-last_winner_link{
     height: 3.2rem;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     flex-direction: row;
     border-radius: 3rem;
     background-color: black;
@@ -642,7 +723,22 @@ color: white;
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 0 0 0.6rem;
+    padding: 0 0.6rem;
+}
+
+.common-last_winner_external_link{
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.common-last_winner_external_link img{
+    height: 3rem;
+    width: 3rem;
+    border-radius: 0;
+    padding: 0.75rem;
 }
 
 .common-last_winner_socials{
@@ -667,6 +763,66 @@ color: white;
     width: 2rem;
     height: 2rem;
     padding: 2.5%;
+    transition: 0.5s;
+}
+
+.common-last_winner_socials a img{text-decoration: none;}
+.common-last_winner_socials a img:link{text-decoration: none; color: black;}
+.common-last_winner_socials a img:visited{text-decoration: none; color: black;}
+.common-last_winner_socials a img:hover{
+transform: scale(1.1) translateY(-0.3rem);
+transition: 0.5s;
+}
+
+.submit_section-div form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+}
+
+.submit_section-div form h2{
+    font-size: 1.1rem;
+    align-self: flex-start;
+}
+
+.submit_section-div form input{
+    width: 100%;
+    height: 2rem;
+    border-radius: 2.5rem;
+    padding: 0 1rem;
+    outline: none;
+    color: white;
+    background: black;
+    border: none;
+}
+
+.submit_section-div form button{
+    align-self: center;
+    width: 40%;
+    height: 2rem;
+    border: none;
+    border-radius: 2.5rem;
+    outline: none;
+    color: white;
+    background: black;
+    transition: 1s;
+}
+
+.submit_section-div form button{text-decoration: none;}
+.submit_section-div form button:link{text-decoration: none; color: black;}
+.submit_section-div form button:visited{text-decoration: none; color: black;}
+.submit_section-div form button:hover{
+    transform: scale(1.15) translateY(0.25rem);
+    transition: 1s;
+}
+
+.submit_section-div form input::placeholder{
+    color: white;
+    opacity: 0.5;
+    font-weight: 700;
 }
 
 
@@ -674,3 +830,199 @@ color: white;
 
 /* vote_section------------------------------------------------------------- */
   
+#vote_section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vote_section-container{
+    height: 67.5%;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.vote_section-div{
+    width: 50%;
+    height: 100%;
+    margin: 0 1.25rem;
+}
+
+.vote_section-search{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 1.5rem;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(2.5px);
+    padding: 0.3rem 2rem;
+    margin: 0 0 1rem 0;
+}
+
+.vote_section-search input{
+    width: 100%;
+    height: 2rem;
+    border-radius: 2.5rem;
+    padding: 0 1rem;
+    outline: none;
+    color: black;
+    background: transparent;
+    border: none;
+}
+
+.vote_section-main{
+    border-radius: 1.5rem;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(2.5px);
+    padding: 1rem 2rem;
+}
+
+.vote_section-leaderboard{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+}
+
+.vote_section-leaderboard_title{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 0 1rem 0;
+}
+
+.vote_section-leaderboard_tag{
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 0.4rem 0;
+    padding: 0 0.5rem;
+}
+
+.vote_section-leaderboard_tag_number{
+    font-size: 2rem;
+}
+
+.vote_section-leaderboard_tag_streamer{
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    border-radius: 2rem;
+    background-color: white;
+    margin: 0;
+    padding: 0.1rem;
+}
+
+.vote_section-leaderboard_tag_streamer_img{
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vote_section-leaderboard_tag_streamer_img img{
+    height: 2rem;
+    width: 2rem;
+    border-radius: 2rem;
+    padding: 0.1rem;
+}
+
+.vote_section-leaderboard_tag_streamer_name{
+    font-size: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 0.8rem;
+}
+
+.vote_section-leaderboard_tag_streamer_plus{
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vote_section-leaderboard_tag_streamer_plus button{
+    height: 2rem;
+    width: 2rem;
+    border-radius: 3rem;
+    border: none;
+    background-color: transparent;
+}
+
+.vote_section-list{
+    background-color: white;
+    padding: 0.5rem 1rem;
+    height: 8rem;
+    border-radius: 1.5rem;
+}
+
+.vote_section-list_overflow{
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    padding: 0 0.5rem;
+}
+
+.vote_section-list_tag_streamer{
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    border-radius: 1.5rem;
+    background-color: black;
+    margin: 0.2rem 0;
+    padding: 0.1rem;
+}
+
+.vote_section-list_tag_streamer_img{
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vote_section-list_tag_streamer_img img{
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 1.5rem;
+    padding: 0.1rem;
+}
+
+.vote_section-list_tag_streamer_name{
+    font-size: 0.8rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 0.8rem;
+    color: white;
+}
+
+.vote_section-list_tag_streamer_plus{
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vote_section-list_tag_streamer_plus button{
+    height: 2rem;
+    width: 2rem;
+    border-radius: 3rem;
+    border: none;
+    background-color: transparent;
+}
